--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-carousel3": "^1.0.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-spring-3d-carousel": "^1.3.4",
     "tailwindcss": "3.3.2"
   }
 }
