--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-spring-3d-carousel": "^1.3.4",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "tailwindcss-filters": "^3.0.0"
   }
 }
