--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "flowbite": "^1.8.0",
+    "flowbite-react": "^0.5.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -22,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-spring-3d-carousel": "^1.3.4",
+    "swiper": "^10.0.4",
     "tailwindcss": "3.3.2",
     "tailwindcss-filters": "^3.0.0"
   }
