--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-carousel3": "^1.0.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-spring-3d-carousel": "^1.3.4",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.2",
